@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.2-5.013
-Date: 2024-01-29
+Version: 3.2-5.014
+Date: 2024-01-30
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
