@@ -65,6 +65,7 @@ export("bind.ratfv")
 export("bits.envelope")
 export("bits.test")
 export("blur")
+export("boyce")
 export("bw.abram")
 export("bw.abram.ppp")
 export("bw.CvL")
